unpackaged/main/default/objects/Nomination__c/Nomination__c.object-meta.xml
<CustomObject>
    <label>Nomination</label>
    <nameField>
        <label>Nomination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>