unpackaged/main/default/objects/Nomination__c/fields/Actual_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Awarded_Amount__c</fullName>
    <label>Actual Awarded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>