unpackaged/main/default/objects/Nomination__c/fields/Discount_Total_from_Opp__c.field-meta.xml
<CustomField>
    <fullName>Discount_Total_from_Opp__c</fullName>
    <description>Displays the discount total from the opportunity to the Nomination for easier view.</description>
    <formula>Opportunity__r.Discount_Total__c</formula>
    <label>Discount Total from Opp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>