unpackaged/main/default/objects/Nomination__c/fields/Expected_Family_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Family_Contribution__c</fullName>
    <description>Adds Expected Family Contribution Amount from Opportunity so this can be viewed on the nomination without going between records</description>
    <formula>Opportunity__r.Expected_Family_Contribution__c</formula>
    <label>Expected Family Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>