unpackaged/main/default/objects/Nomination__c/fields/ILA_Scoring_Rubric_Link__c.field-meta.xml
<CustomField>
    <fullName>ILA_Scoring_Rubric_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://vertoeducation.formstack.com/forms/ila_rubric?students_first_name=&quot;&amp;Students_First_Name__c &amp;&quot;&amp;students_last_name=&quot;&amp; Students_Last_Name__c&amp;&quot; &amp;nomination_id=&quot;&amp; Id, &quot;ILA Scoring Rubric&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILA Scoring Rubric Link</label>
    <type>Text</type>
</CustomField>