unpackaged/main/default/objects/Nomination__c/fields/Nominator_Email__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Email__c</fullName>
    <label>Nominator Email</label>
    <type>Email</type>
</CustomField>