unpackaged/main/default/objects/Nomination__c/fields/Nominator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Phone__c</fullName>
    <label>Nominator Phone</label>
    <type>Phone</type>
</CustomField>