unpackaged/main/default/objects/Nomination__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Nominations</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>