unpackaged/main/default/objects/Nomination__c/fields/Proposed_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Awarded_Amount__c</fullName>
    <label>Proposed Awarded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>