unpackaged/main/default/objects/Nomination__c/fields/Relation_to_Nominee__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Nominee__c</fullName>
    <label>Relation to Nominee</label>
    <type>TextArea</type>
</CustomField>