unpackaged/main/default/objects/Nomination__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <formula>Opportunity__r.Current_Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semester</label>
    <type>Text</type>
</CustomField>