unpackaged/main/default/objects/Nomination__c/fields/Students_Email__c.field-meta.xml
<CustomField>
    <fullName>Students_Email__c</fullName>
    <label>Students Email</label>
    <type>Email</type>
</CustomField>