unpackaged/main/default/objects/Nomination__c/fields/Students_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Students_First_Name__c</fullName>
    <label>Students First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>