unpackaged/main/default/objects/Nomination__c/fields/Students_Phone__c.field-meta.xml
<CustomField>
    <fullName>Students_Phone__c</fullName>
    <label>Students Phone</label>
    <type>Phone</type>
</CustomField>