unpackaged/main/default/objects/Nomination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Proposed_Awarded_Amount__c</columns>
    <columns>Actual_Awarded_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>