unpackaged/main/default/objects/Nomination__c/listViews/Awards_to_Review.listView-meta.xml
<ListView>
    <fullName>Awards_to_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Review</value>
    </filters>
    <label>02 - Awards to Review</label>
</ListView>