unpackaged/main/default/objects/Nomination__c/listViews/New_ILA_Nominations.listView-meta.xml
<ListView>
    <fullName>New_ILA_Nominations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>01 - New ILA Nominations</label>
</ListView>