unpackaged/main/default/objects/Nomination__c/listViews/New_Rubrics_to_Review.listView-meta.xml
<ListView>
    <fullName>New_Rubrics_to_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rubric Recieved</value>
    </filters>
    <label>03 - New Rubrics to Review</label>
</ListView>